# AudioAssets

./: .gitattributes  AGENTS.md  CURRENT_TASK.md  LICENSE  README.md  SONGLIST.md  make_single_mp3_part1.sh  make_single_mp3_part2.sh
.gemini/: settings.json
Book/: 001 - Book Logging Kickoff.md  002 - Voice & Roles.md  003 - Backfill Index & Checker.md  004 - README Sync Check.md  005 - Auto README Generator.md  006 - Session Close Protocol.md  Auto README Generator.md  Backfill Index & Checker.md  Book Logging Kickoff.md  README Sync Check.md  README.md  Session Close Protocol.md  Voice & Roles.md
docs/: index.html
docs/content/: bundle_002.js  dom_request_xhr.js  font-awesome.css  gm.js  jquery_002.js  js.js  loader.js  logo.xcf  player.js  plugin_002.js
docs/css/: style.css
lyrics/: Allyship.md  Example - Audience evaluation.txt  Example - Rate structured.txt  Example - Screenplay to Structure.txt
release/: levykoodit.txt
scripts/: add_meta_mp3s.py  book_check.sh  book_update_readme.sh  cleanup_meta_placeholders.py  generate_www.py  serve_www.bat  serve_www.sh
share/: AI notes.txt  TODO notes.txt
src/: rhyme_calculator_mcp.py
src/rhyme_calculator/: .gitignore  README.md  __main__.py  cli.py  engine.py  manager.py  models.py  pyproject.toml  requirements.txt  setup.py  test_basic.py
src/rhyme_calculator/docs/: api_reference.md  completion_summary.md  tutorial.md  user_guide.md
src/rhyme_calculator/tests/: test_engine.py  test_integration.py  test_manager.py  test_models.py
www/: 404.html  AGENTS.md  CURRENT_TASK.md  index.html
(+2760 files in other folders)
