[project]
name = "rhyme-calculator"
version = "0.1.0"
description = "A Python program that calculates rhyming scores for English lyrics"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "pronouncing>=0.2.0",
    "click>=8.0.0"
]

[project.scripts]
rhyme-calc = "rhyme_calculator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rhyme_calculator*"]